cluster/apps/chrony/chrony/app/network-policies.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# Allow NTP egress to upstream time servers
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ntp-egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/controller: chrony
      app.kubernetes.io/instance: chrony
      app.kubernetes.io/name: chrony
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "123"
              protocol: UDP
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# Allow NTS egress for Network Time Security authentication
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-nts-egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/controller: chrony
      app.kubernetes.io/instance: chrony
      app.kubernetes.io/name: chrony
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "4460"
              protocol: TCP
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# Allow NTP ingress from world (LoadBalancer serves local network clients)
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ntp-ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/controller: chrony
      app.kubernetes.io/instance: chrony
      app.kubernetes.io/name: chrony
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "1123"
              protocol: UDP
